--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,11 +17,11 @@
         Please enable it to continue.</strong>
   </noscript>
   <div id="app">
-    <div class="loading-screen">
+    <!-- <div class="loading-screen">
       <div class="spinner-border text-primary" role="status">
         <span class="visually-hidden">Loading...</span>
       </div>
-    </div>
+    </div> -->
   </div>
   <!-- built files will be auto injected -->
 </body>
