--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+  <!-- Favicon -->
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+  <!-- iOS PWA Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="<%= htmlWebpackPlugin.options.title %>">
+  <link rel="apple-touch-icon" href="<%= BASE_URL %>icons/apple-touch-icon.png">
+
+  <!-- Web App Manifest (for Android and modern browsers) -->
+  <link rel="manifest" href="<%= BASE_URL %>manifest.json">
+
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
@@ -16,13 +28,7 @@
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
   </noscript>
-  <div id="app">
-    <!-- <div class="loading-screen">
-      <div class="spinner-border text-primary" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    </div> -->
-  </div>
+  <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
 
